

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

    <Button android:id="@+id/btnOpciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opciones" />

    <Button android:id="@+id/btnMover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btnOpciones"
        android:text="@string/mover" />

    <Button android:id="@+id/btnAnimar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btnMover"
        android:text="@string/animar" />

    <Button android:id="@+id/btnPosicion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btnAnimar"
        android:text="@string/pos" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="edu.cibertec.android.pharmamedic.MapsActivity" />

    <Button android:id="@+id/btnMarcador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marcador"
        android:layout_below="@+id/btnOpciones"
        android:layout_toStartOf="@+id/btnAnimar" />

    <Button android:id="@+id/btnRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regresar"
        android:layout_below="@+id/btnAnimar"
        android:layout_toEndOf="@+id/btnMarcador"
        android:layout_marginStart="11dp" />

</RelativeLayout>